# common-django

./: Dockerfile  README.md  dev.Dockerfile  pyproject.toml
common/: exception.py  global_response.py  models.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
service_auths/: apps.py  models.py  serializer.py  service_user_manager.py  tests.py  urls.py  views.py
